<resources>
    <string name="app_name">InterviewManager</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_main_fragment_tv">开启旅程</string>
    <string name="main_fragment_edit">编辑</string>
    <string name="main_fragment_all">全选</string>
    <string name="main_fragment_cancel">取消</string>
    <string name="main_fragment_delete">删除</string>
    <string name="main_fragment_menu_set">设置</string>
    <string name="main_fragment_menu_statistics">统计</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
    <string name="login_fragment_title">LOGIN</string>
    <string name="login_fragment_user_hint">请输入用户名</string>
    <string name="login_fragment_password_hint">请输入密码</string>
    <string name="login_fragment_login_btn">登录</string>
    <string name="login_fragment_forget_password">忘记密码？</string>



    <string name="update_dialog_title">检测到新版本</string>
    <string name="update_dialog_download">下载</string>
    <string name="update_dialog_undownload">下次再说</string>
</resources>
