<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/one">
        <item
            android:id="@+id/main_fragment_edit"
            android:title="@string/main_fragment_edit"
            app:showAsAction="always"/>
    </group>
    <group android:id="@+id/two">
        <item
            android:id="@+id/main_fragment_cancel"
            android:title="@string/main_fragment_cancel"
            app:showAsAction="always"/>
        <item
            android:id="@+id/main_fragment_all"
            android:title="@string/main_fragment_all"
            app:showAsAction="always"/>
        <item
            android:id="@+id/main_fragment_delete"
            android:title="@string/main_fragment_delete"
            app:showAsAction="always"/>
    </group>


</menu>