<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#6495ED"
    android:clipChildren="false">

    <android.support.v7.widget.CardView
        android:id="@+id/login_fragment_cardview"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_fragment_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="50dp"
                    android:layout_centerVertical="true"
                    android:textColor="#FFCC00"/>
            </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_fragment_user_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="text"
                android:hint="@string/login_fragment_user_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_fragment_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/login_fragment_password_hint"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_fragment_login_btn"
            android:background="@drawable/login_fragment_btn_selector"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/login_fragment_auto_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自动登录"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/login_fragment_remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="记住密码"/>
            </LinearLayout>
        </LinearLayout>
            <View
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="#000000"
                android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/login_fragment_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_fragment_forget_password"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/login_fragment_cardview"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@id/login_fragment_cardview"
        android:layout_marginRight="-20dp"/>
</RelativeLayout>